Implement Jwt auth and RBAC

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,9 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # this will tell hibernate how mysql behaves
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+security.jwt.secret=change-this-secret-to-a-32-byte-minimum-key
+security.jwt.issuer=voucher-management-system
+security.jwt.expiration-seconds=86400
+security.roles.admin=ADMIN
+security.roles.user=USER
